(library
 (name roundtrip_tests)
 (public_name ocaml-protoc-tests.roundtrip-tests)
 (inline_tests)
 (flags :standard -w -66)
 (libraries base base_quickcheck pbrt pbrt_yojson qcheck qcheck-core yojson)
 (preprocess
  (pps
   ppx_deriving_qcheck
   ppx_expect
   ppx_sexp_conv
   ppx_sexp_value
   ppx_compare
   base_quickcheck.ppx_quickcheck)))

(rule
 (targets messages.ml messages.mli)
 (deps messages.proto)
 (action
  (run
   ocaml-protoc
   ; Currently qcheck & qcheck2 don't work with sigs, so the following doesn't work.
   ;   --ocaml_all_types_ppx
   ;   "deriving qcheck"
   --binary
   --yojson
   --pp
   --ml_out
   ./
   %{deps})))

(rule
 (alias runtest)
 (action
  (diff messages.ml.expected messages.ml)))

(rule
 (alias runtest)
 (action
  (diff messages.mli.expected messages.mli)))
