(library
 (name roundtrip_tests)
 (public_name ocaml-protoc-tests.roundtrip-tests)
 (inline_tests)
 (flags :standard -w -66)
 (libraries pbrt pbrt_yojson qcheck qcheck-core yojson)
 (preprocess
  (pps ppx_deriving_qcheck ppx_expect ppx_deriving.show ppx_deriving.eq)))

(rule
 (targets messages.ml messages.mli)
 (deps messages.proto)
 (action
  (run
   ocaml-protoc
   --ocaml_all_types_ppx
   "deriving show { with_path = false }, eq"
   --binary
   --yojson
   --ml_out
   ./
   %{deps})))

(rule
 (alias runtest)
 (action
  (diff messages.ml.expected messages.ml)))

(rule
 (alias runtest)
 (action
  (diff messages.mli.expected messages.mli)))
