(executable
 (name main)
 (flags :standard -w -66)
 (libraries pbrt pbrt_yojson pbrt_quickcheck qcheck qcheck-core yojson)
 (preprocess
  (pps ppx_deriving_qcheck ppx_deriving.show ppx_deriving.eq)))

(rule
 (targets messages.ml messages.mli)
 (deps messages.proto)
 (action
  (run
   ocaml-protoc
   --ocaml_all_types_ppx
   "deriving show { with_path = false }, eq, qcheck2"
   --binary
   --yojson
   --quickcheck
   --ml_out
   ./
   %{deps})))

(rule
 (alias runtest)
 (action
  (diff messages.ml.expected messages.ml)))

(rule
 (alias runtest)
 (action
  (diff messages.mli.expected messages.mli)))

(rule
 (target test.outputs)
 (action
  (with-accepted-exit-codes
   (or 0 1)
   (with-outputs-to
    %{target}
    (run ./%{dep:main.exe} --no-colors --seed 382079347)))))

(rule
 (alias runtest)
 (action
  (diff test.outputs.expected test.outputs)))
