(test
 (name yojson_unittest_ml)
 (package ocaml-protoc)
 (libraries pbrt pbrt_yojson))

(rule
 (targets yojson_unittest.ml yojson_unittest.mli)
 (deps
  (:file yojson_unittest.proto)
  (:json yojson.data))
 (action
  (run %{project_root}/src/ocaml-protoc/ocaml_protoc.exe %{file} --yojson
    --dump_type_repr --pp --ml_out=.)))
